<resources>
    <string name="app_name">MyRuns4</string>

    <!--    Profile page strings-->
    <string name="user_image_description">Profile Picture</string>
    <string name="change_profile_picture">Change</string>
    <string name="profile_photo">Profile Photo:</string>
    <string name="profile_name">Name:</string>
    <string name="profile_name_hint">Your Name</string>
    <string name="profile_email">Email:</string>
    <string name="profile_email_hint">Your Email</string>
    <string name="profile_phone">Phone:</string>
    <string name="profile_phone_hint">Your Phone Number</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_class">Class:</string>
    <string name="profile_class_hint">eg. 2012</string>
    <string name="profile_major">Major:</string>
    <string name="profile_major_hint">Your Major</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_cancel_button">Cancel</string>
    <string name="Permissions">App Permissions</string>
    <string name="PermissionDialogBody">Camera and Storage settings are required to capture profile picture. Please enable permissions in Settings.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="sharedPUserName">userName</string>
    <string name="sharePUserEmail">userEmail</string>
    <string name="sharedPUserPhone">userPhone</string>
    <string name="sharedPUserGender">userGender</string>
    <string name="sharedPUserClass">userClass</string>
    <string name="sharedPUserMajor">userMajor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="activity_type">Activity Type</string>
    <string name="start">Start</string>
    <string name="input_type">Input Type</string>

    <string name="messages_header">Messages</string>

    <string name="sync_header">Sync</string>

    <string name="signature_title">Your signature</string>
    <!-- Preference Titles -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Messages Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_automatic">Automatic</string>
    <string-array name="input_types">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_types">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountaun Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string-array name="manual_list_items">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>HeartRate</item>
        <item>Comment</item>
    </string-array>
    <string name="title_activity_gpsentry">gpsentry</string>

</resources>